--- a/index.html
+++ b/index.html
@@ -1,10 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>chadwtkns.io</title>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Portfolio Site for Chad Watkins">
+    <meta name="author" content="Chad Watkins">
+
+    <title>chadwtkns.github.io</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/landing-page.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
 </head>
+
 <body>
 
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+        <div class="container topnav">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand topnav" href="#"><img src="img/ChadWatkins_Name.png" alt="Chad Watkins logo"></a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="#work">Work</a>
+                    </li>
+                    <li>
+                        <a href="#skills">Skills</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+
+    <!-- Header -->
+    <a name="about"></a>
+    <div class="intro-header">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="intro-message">
+                        <h1>Welcome</h1>
+                        <h3>chadwtkns.github.io</h3>
+                        <hr class="intro-divider">
+                        <ul class="list-inline intro-social-buttons">
+                            <li>
+                                <a href="img/Resume.pdf" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-folder fa-fw"></i> <span class="network-name">Resume</span></a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/chadwtkns" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                            </li>
+                            <li>
+                                <a href="https://www.linkedin.com/profile/view?id=AAIAAAretCYBlWQD0IExDkRjihY4MaE1UBkhbp4&trk=nav_responsive_tab_profile_pic" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.intro-header -->
+
+    <!-- Page Content -->
+
+	<a  name="work"></a>
+    <div class="content-section-a">
+
+        <div class="container">
+          <h1>Work</h1>
+            <div class="row">
+                <div class="col-lg-4 col-sm-6">
+                    <img class="img-responsive" src="img/doterra.png" alt="doterra logo">
+                    <h3 class="text-center">dōTERRA</h3>
+                    <p class="lead">&bull; Worked on various projects notably AromaTouch.com
+                      <br> - Built the front-end (AngularJS)
+                      <br> - Used Agile Methodology: Scrum</p>
+                    <p class="lead">&bull; Worked with various departments in the company</p>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <img class="img-responsive center" src="img/educate_logo.png" alt="Educate and Empower Kids Logo">
+                    <h3 class="text-center">Educate and Empower Kids</h3>
+                    <p class="lead">&bull; Creating a video competition site on NodeJS and RethinkDB
+                      <br> - In charge of project management and development</p>
+                </div>
+                <div class="col-lg-4  col-sm-6">
+                    <img class="img-responsive" src="img/infiniti_creations.jpg" alt="Infiniti Creations Logo">
+                    <h3 class="text-center">Infiniti Creations</h3>
+                    <p class="lead">&bull; Created various graphics in Illustrator and Photoshop</p>
+                    <p class="lead">&bull; Oversaw printing of thousands of labels a day</p>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-a -->
+    <a name="skills"></a>
+    <div class="content-section-b">
+
+        <div class="container">
+          <h1>Skills</h1>
+            <div class="row">
+                <div class="col-sm-12">
+                   <span class="skillText">HTML</span><div class="html"></div>
+                   <span class="skillText">CSS</span><div class="css"></div>
+                   <span class="skillText">Javascript</span><div class="javascript"></div>
+                   <span class="skillText">AngularJS</span><div class="angular"></div>
+                   <span class="skillText">Git</span><div class="git"></div>
+                   <span class="skillText">AWS, Linux, Apache</span><div class="grunt"></div>
+                   <span class="skillText">Wordpress</span><div class="wordpress"></div>
+                   <span class="skillText">SASS</span><div class="sass"></div>
+                   <span class="skillText">NodeJS</span><div class="node"></div>
+                   <span class="skillText">PHP</span><div class="jquery"></div>
+                   <span class="skillText">Photoshop</span><div class="photoshop"></div>
+                   <span class="skillText">Illustrator</span><div class="illustrator"></div>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-b -->
+
+
+	<a  name="contact"></a>
+    <div class="banner">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-6">
+                    <h2>Connect with me online:</h2>
+                </div>
+                <div class="col-lg-6">
+                    <ul class="list-inline banner-social-buttons">
+                        <li>
+                            <a href="img/Resume.pdf" class="btn btn-default btn-lg"><i class="fa fa-folder fa-fw"></i> <span class="network-name">Resume</span></a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/chadwtkns" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/profile/view?id=AAIAAAretCYBlWQD0IExDkRjihY4MaE1UBkhbp4&trk=nav_responsive_tab_profile_pic" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.banner -->
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="list-inline">
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="#work">Work</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="#skills">Skills</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="#contact">Contact</a>
+                        </li>
+                    </ul>
+                    <p class="copyright text-muted small">Copyright &copy; Chad Watkins 2015. All Rights Reserved</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
+
 </html>
