added previous portfolio link.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                     <div class="intro-message">
                         <h1>Welcome</h1>
                         <h3>chadwtkns.github.io</h3>
+                        <p>Hey Im still in the process of migrating everything over from my previous portfolio site. If you want to check that out click away: <a href="http://chadandsarahwatkins.com">chadandsarahwatkins.com</a></p>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
