Changed the background image

--- a/index.html
+++ b/index.html
@@ -104,15 +104,16 @@
     <div class="content-section-a">
 
         <div class="container">
-          <h1>Work</h1>
+          <h1>Projects</h1>
             <div class="row">
                 <div class="col-lg-4 col-sm-6">
+
                     <img class="img-responsive" src="img/doterra.png" alt="doterra logo">
-                    <h3 class="text-center">dōTERRA</h3>
+                    <!-- <h3 class="text-center">dōTERRA</h3>
                     <p class="lead">&bull; Worked on various projects notably AromaTouch.com
                       <br> - Built the front-end (AngularJS)
                       <br> - Used Agile Methodology: Scrum</p>
-                    <p class="lead">&bull; Worked with various departments in the company</p>
+                    <p class="lead">&bull; Worked with various departments in the company</p> -->
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <img class="img-responsive center" src="img/educate_logo.png" alt="Educate and Empower Kids Logo">
