--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#"><img src="img/ChadWatkins_Name.png" alt="Chad Watkins logo"></a>
+                <a class="navbar-brand topnav" href="#"><img src="img/ChadWatkins_Name.svg" alt="Chad Watkins logo"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -109,11 +109,11 @@
                 <div class="col-lg-4 col-sm-6">
 
                     <img class="img-responsive" src="img/doterra.png" alt="doterra logo">
-                    <!-- <h3 class="text-center">dōTERRA</h3>
+                    <h3 class="text-center">dōTERRA</h3>
                     <p class="lead">&bull; Worked on various projects notably AromaTouch.com
                       <br> - Built the front-end (AngularJS)
                       <br> - Used Agile Methodology: Scrum</p>
-                    <p class="lead">&bull; Worked with various departments in the company</p> -->
+                    <p class="lead">&bull; Worked with various departments in the company</p>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <img class="img-responsive center" src="img/educate_logo.png" alt="Educate and Empower Kids Logo">
