--- a/pdftest/pdftest.html
+++ b/pdftest/pdftest.html
@@ -3,9 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <link rel="stylesheet" href="pdftest.css" media="print">
+  <link rel="stylesheet" href="nonPrint.css" media="screen">
 </head>
 <body>
-  <div><div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla enim commodi, doloremque repudiandae impedit, repellendus, recusandae, corporis quo sit tempora illo harum laudantium qui ad! Autem fuga iure adipisci, minus.</div>
+  <div class="green">Lōrem ipsffum  dfiloflr sit amet,™ consectetur adipisicing elit. Nulla enim commodi, doloremque repudiandae impedit, repellendus, recusandae, corporis quo sit tempora illo harum laudantium qui ad! Autem fuga iure adipisci, minus.</div>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed temporibus repellendus, accusantium aspernatur nostrum vel enim! Mollitia perferendis, blanditiis nam provident consequatur dignissimos saepe, asperiores eius. Itaque pariatur, perferendis doloribus.</p>
+  <ul>
+    <li>Something</li>
+    <li>Something else</li>
+    <li>Some</li>
+    <li>Thing</li>
+    <li>Else</li>
+  </ul>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ut obcaecati incidunt cum animi libero at qui ullam totam doloremque, delectus praesentium commodi, dolore numquam reprehenderit quasi officiis veritatis. Tempora!</p>
+  <br>
+  <div class="hidePlease">Chad is awesome</div>
+  <br>
   <div>Commodi facilis ex recusandae culpa veritatis doloribus consequatur totam officia deleniti et laudantium mollitia vel rem, excepturi ratione nostrum aut omnis, quaerat provident delectus accusantium obcaecati, exercitationem in voluptate. Iste?</div>
   <div>Natus doloremque deleniti, soluta cum laudantium quod consequuntur consequatur dolore, nostrum, autem mollitia iusto rem voluptatum nisi maiores! Vel optio aspernatur numquam quae mollitia quis nulla perferendis modi, veritatis fugit?</div>
   <div>Voluptatibus commodi, voluptate, possimus voluptates eligendi sed maiores tempore natus voluptatem quis, porro, eius? Nisi cumque, architecto accusamus neque nostrum, veniam laboriosam esse, sunt et doloremque deserunt ad omnis placeat!</div>
@@ -105,8 +119,8 @@
   <div>Tenetur, blanditiis cumque ipsa similique officiis harum iusto. Perspiciatis esse libero autem iure placeat! Fugiat aperiam voluptatem, repellat minima, voluptas vero. Delectus necessitatibus sequi libero ducimus neque. Perspiciatis, provident, sequi?</div>
   <div>Odio neque explicabo, nisi? Veritatis cupiditate eius, facere pariatur voluptate commodi ea officia reiciendis impedit quo, qui accusamus, non repellat placeat. Nesciunt tempora velit veniam ab, vel iure officiis non.</div>
   <div>Iure pariatur nam debitis quasi, consequatur, consectetur minima praesentium, fuga animi, possimus optio! Ad eius voluptatem libero consectetur illo voluptatum sunt temporibus? Iure culpa nihil sint esse eum aspernatur perspiciatis.</div>
-  <div>Debitis animi non nihil natus labore ullam ea magni, sapiente id cumque officiis dolores nobis fuga ut voluptatem unde consequatur, tenetur amet. Iste aperiam, iure. Quibusdam veniam alias, ab placeat.</div></div>
-  <a href="//pdfcrowd.com/url_to_pdf/?">Save to PDF</a>
+  <div>Debitis animi non nihil natus labore ullam ea magni, sapiente id cumque officiis dolores nobis fuga ut voluptatem unde consequatur, tenetur amet. Iste aperiam, iure. Quibusdam veniam alias, ab placeat.</div>
+  <a href="//pdfcrowd.com/url_to_pdf/?height=-1&use_print_media=1">Save to PDF</a>
 
   </script>
 </body>
