--- a/pdftest/pdftest.html
+++ b/pdftest/pdftest.html
@@ -8,10 +8,13 @@
 </head>
 <body>
   <div class="green">Lōrem ipsffum  dfiloflr sit amet,™ consectetur adipisicing elit. Nulla enim commodi, doloremque repudiandae impedit, repellendus, recusandae, corporis quo sit tempora illo harum laudantium qui ad! Autem fuga iure adipisci, minus.</div>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed temporibus repellendus, accusantium aspernatur nostrum vel enim! Mollitia perferendis, blanditiis nam provident consequatur dignissimos saepe, asperiores eius. Itaque pariatur, perferendis doloribus.</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicingΔ elitαγ	&alpha;	&beta;&gamma;. Sed temporibus repellendus, accusantium aspernatur nostrum vel enim! Mollitia perferendis, blanditiis nam provident consequatur dignissimos saepe, asperiores eius. Itaque pariatur, perferendis doloribus.</p>
   <ul>
     <li>Something</li>
-    <li>Something else</li>
+    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+      mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing e
+      lit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+    <li class="blue">Something else</li>
     <li>Some</li>
     <li>Thing</li>
     <li>Else</li>
@@ -20,6 +23,7 @@
   <br>
   <div class="hidePlease">Chad is awesome</div>
   <br>
+  <hr>
   <div>Commodi facilis ex recusandae culpa veritatis doloribus consequatur totam officia deleniti et laudantium mollitia vel rem, excepturi ratione nostrum aut omnis, quaerat provident delectus accusantium obcaecati, exercitationem in voluptate. Iste?</div>
   <div>Natus doloremque deleniti, soluta cum laudantium quod consequuntur consequatur dolore, nostrum, autem mollitia iusto rem voluptatum nisi maiores! Vel optio aspernatur numquam quae mollitia quis nulla perferendis modi, veritatis fugit?</div>
   <div>Voluptatibus commodi, voluptate, possimus voluptates eligendi sed maiores tempore natus voluptatem quis, porro, eius? Nisi cumque, architecto accusamus neque nostrum, veniam laboriosam esse, sunt et doloremque deserunt ad omnis placeat!</div>
