page break changes

--- a/pdftest/pdftest.html
+++ b/pdftest/pdftest.html
@@ -62,6 +62,24 @@
   <div>Iure beatae quidem aspernatur temporibus, explicabo exercitationem odio molestias reiciendis magni laboriosam! Quod, nisi voluptatibus sequi est ducimus reiciendis fugiat rem nostrum perspiciatis minus veniam saepe, incidunt eum quam, consectetur?</div>
   <div>Tenetur, nulla, ab. Magni quisquam sapiente repellendus molestiae sint quo aspernatur obcaecati placeat, ducimus blanditiis? Rem culpa laudantium quam tenetur voluptatibus delectus pariatur numquam. Dolor, dolore unde! Eum, est quidem?</div>
   <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+  <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+  <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+  <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+  <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+  <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+  <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+  <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+  <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+  <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+  <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+  <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+  <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+  <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+  <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+  <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+  <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+  <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
+  <img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=350&h=150" alt="">
   <span>Veritatis quas quod voluptatem rem repudiandae officiis sed dolore eveniet voluptas, officia asperiores esse voluptatum dolorum, quia quidem voluptates accusamus at labore. Accusamus debitis nemo voluptates nam libero. Natus, accusamus!</span>
   <div>Quibusdam fugit pariatur sint voluptatum dignissimos quas illo distinctio, ipsa esse molestias, officiis, eius maiores laboriosam natus modi voluptate necessitatibus itaque, fuga iste. Veritatis exercitationem delectus sit iusto, necessitatibus dolore.</div>
   <div>Quas veritatis natus, recusandae laudantium minus! Dolorum beatae adipisci optio, itaque inventore. Repellendus, unde consectetur distinctio dignissimos, possimus optio iste temporibus aut est corporis praesentium quidem illum ratione? Velit, magni.</div>
