combine print and screen test

--- a/pdftest/pdftest.html
+++ b/pdftest/pdftest.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <link rel="stylesheet" href="pdftest.css" media="print">
-  <link rel="stylesheet" href="nonPrint.css" media="screen">
+  <link rel="stylesheet" href="pdftest.css" media="screen">
+  <!-- <link rel="stylesheet" href="nonPrint.css" media="screen"> -->
 </head>
 <body>
   <div class="green">Lōrem ipsffum  dfiloflr sit amet,™ consectetur adipisicing elit. Nulla enim commodi, doloremque repudiandae impedit, repellendus, recusandae, corporis quo sit tempora illo harum laudantium qui ad! Autem fuga iure adipisci, minus.</div>
