--- a/pdftest/pdftest.html
+++ b/pdftest/pdftest.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <link rel="stylesheet" href="pdftest.css" media="screen">
+  <link rel="stylesheet" href="pdftest.css" media="screen,print">
   <!-- <link rel="stylesheet" href="nonPrint.css" media="screen"> -->
 </head>
 <body>
