font awesome test

--- a/pdftest/pdftest.html
+++ b/pdftest/pdftest.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <link rel="stylesheet" href="pdftest.css" media="screen,print">
-  <!-- <link rel="stylesheet" href="nonPrint.css" media="screen"> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="pdftest.css" media="print">
+  <link rel="stylesheet" href="nonPrint.css" media="screen">
 </head>
 <body>
   <div class="green">Lōrem ipsffum  dfiloflr sit amet,™ consectetur adipisicing elit. Nulla enim commodi, doloremque repudiandae impedit, repellendus, recusandae, corporis quo sit tempora illo harum laudantium qui ad! Autem fuga iure adipisci, minus.</div>
@@ -24,6 +25,7 @@
   <div class="hidePlease">Chad is awesome</div>
   <br>
   <hr>
+  <i class="fa fa-bluetooth-b"></i><i class="fa fa-bluetooth-b"></i><i class="fa fa-bluetooth-b"></i><i class="fa fa-bluetooth-b"></i>
   <div>Commodi facilis ex recusandae culpa veritatis doloribus consequatur totam officia deleniti et laudantium mollitia vel rem, excepturi ratione nostrum aut omnis, quaerat provident delectus accusantium obcaecati, exercitationem in voluptate. Iste?</div>
   <div>Natus doloremque deleniti, soluta cum laudantium quod consequuntur consequatur dolore, nostrum, autem mollitia iusto rem voluptatum nisi maiores! Vel optio aspernatur numquam quae mollitia quis nulla perferendis modi, veritatis fugit?</div>
   <div>Voluptatibus commodi, voluptate, possimus voluptates eligendi sed maiores tempore natus voluptatem quis, porro, eius? Nisi cumque, architecto accusamus neque nostrum, veniam laboriosam esse, sunt et doloremque deserunt ad omnis placeat!</div>
