--- a/pdftest/pdftest.html
+++ b/pdftest/pdftest.html
@@ -144,8 +144,9 @@
   <div>Odio neque explicabo, nisi? Veritatis cupiditate eius, facere pariatur voluptate commodi ea officia reiciendis impedit quo, qui accusamus, non repellat placeat. Nesciunt tempora velit veniam ab, vel iure officiis non.</div>
   <div>Iure pariatur nam debitis quasi, consequatur, consectetur minima praesentium, fuga animi, possimus optio! Ad eius voluptatem libero consectetur illo voluptatum sunt temporibus? Iure culpa nihil sint esse eum aspernatur perspiciatis.</div>
   <div>Debitis animi non nihil natus labore ullam ea magni, sapiente id cumque officiis dolores nobis fuga ut voluptatem unde consequatur, tenetur amet. Iste aperiam, iure. Quibusdam veniam alias, ab placeat.</div>
-  <a href="http://pdfcrowd.com/url_to_pdf/?height=11in&use_print_media=1&footer_text=%u">Save to PDF</a>
+  <a id="pdftest" href="#">Save to PDF</a>
 
-  </script>
+  <script src="https://code.jquery.com/jquery-1.12.2.min.js"   integrity="sha256-lZFHibXzMHo3GGeehn1hudTAP3Sc0uKXBXAzHX1sjtk="   crossorigin="anonymous"></script>
+  <script src="pdftest.js"></script>
 </body>
 </html>
