test links html

--- a/pdftest/pdftest.html
+++ b/pdftest/pdftest.html
@@ -27,8 +27,8 @@
   <br>
   <hr>
   <i class="fa fa-bluetooth-b"></i><i class="fa fa-bluetooth-b"></i><i class="fa fa-bluetooth-b"></i><i class="fa fa-bluetooth-b"></i>
-  <a href="pdftest2.html">PDFTEST2</a>
-  <a href="pdftest3.html">PDFTEST3</a>
+  <a class="testLinks" href="pdftest2.html">PDFTEST2</a>
+  <a class="testLinks" href="pdftest3.html">PDFTEST3</a>
   <div>Commodi facilis ex recusandae culpa veritatis doloribus consequatur totam officia deleniti et laudantium mollitia vel rem, excepturi ratione nostrum aut omnis, quaerat provident delectus accusantium obcaecati, exercitationem in voluptate. Iste?</div>
   <div>Natus doloremque deleniti, soluta cum laudantium quod consequuntur consequatur dolore, nostrum, autem mollitia iusto rem voluptatum nisi maiores! Vel optio aspernatur numquam quae mollitia quis nulla perferendis modi, veritatis fugit?</div>
   <div>Voluptatibus commodi, voluptate, possimus voluptates eligendi sed maiores tempore natus voluptatem quis, porro, eius? Nisi cumque, architecto accusamus neque nostrum, veniam laboriosam esse, sunt et doloremque deserunt ad omnis placeat!</div>
