--- a/pdftest/pdftest.html
+++ b/pdftest/pdftest.html
@@ -68,7 +68,9 @@
   <div>Iure pariatur nam debitis quasi, consequatur, consectetur minima praesentium, fuga animi, possimus optio! Ad eius voluptatem libero consectetur illo voluptatum sunt temporibus? Iure culpa nihil sint esse eum aspernatur perspiciatis.</div>
   <div>Debitis animi non nihil natus labore ullam ea magni, sapiente id cumque officiis dolores nobis fuga ut voluptatem unde consequatur, tenetur amet. Iste aperiam, iure. Quibusdam veniam alias, ab placeat.</div>
 
-  <a id="pdftest" href="https://pdfcrowd.com/url_to_pdf/?height=11in&use_print_media=1" target="">Save to PDF</a>
+  <div id="pdftest">
+    <a class="dnldButtton" href="https://pdfcrowd.com/url_to_pdf/?height=11in&use_print_media=1" target="">Save to PDF</a>
+  </div>
 
   <script src="https://code.jquery.com/jquery-1.12.2.min.js"   integrity="sha256-lZFHibXzMHo3GGeehn1hudTAP3Sc0uKXBXAzHX1sjtk="   crossorigin="anonymous"></script>
   <script src="pdftest.js"></script>
