--- a/pdftest/pdftest3.html
+++ b/pdftest/pdftest3.html
@@ -5,45 +5,46 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Section 2: Introduction</h1>
-doTERRA Policy Manual
-This dōTERRA® Policy Manual (Policy Manual) has been incorporated into and made part of the Terms and Conditions of the Wellness Advocate Agreement Form.
+  Dont grab!
+  <div id="printDiv"><h1>Section 2: Introduction</h1>
+    doTERRA Policy Manual
+    This dōTERRA® Policy Manual (Policy Manual) has been incorporated into and made part of the Terms and Conditions of the Wellness Advocate Agreement Form.
 
-This Policy Manual, the Wellness Advocate Agreement Form, and the Business Application Addendum constitute the entire agreement (“Contract”) between dōTERRA (“Company”) and the Wellness Advocate.
+    This Policy Manual, the Wellness Advocate Agreement Form, and the Business Application Addendum constitute the entire agreement (“Contract”) between dōTERRA (“Company”) and the Wellness Advocate.
 
-The Contract or any part thereof may be amended by the Company in accordance with the provisions herein. A Wellness Advocate's failure to comply with the provisions of this Policy Manual or any of the referenced documents comprising the Contract between the Company and a Wellness Advocate may, in the sole discretion of the Company, result in any or all of the following: termination of the Distributorship of the Wellness Advocate, loss of the right to sponsor other Wellness Advocates, loss of the right to receive a Bonus, loss of formal recognition by the Company, and suspension or termination of other rights and privileges.
+    The Contract or any part thereof may be amended by the Company in accordance with the provisions herein. A Wellness Advocate's failure to comply with the provisions of this Policy Manual or any of the referenced documents comprising the Contract between the Company and a Wellness Advocate may, in the sole discretion of the Company, result in any or all of the following: termination of the Distributorship of the Wellness Advocate, loss of the right to sponsor other Wellness Advocates, loss of the right to receive a Bonus, loss of formal recognition by the Company, and suspension or termination of other rights and privileges.
 
-A. dōTERRA Company Mission
+    A. dōTERRA Company Mission
 
-dōTERRA is committed to sharing the life-enhancing benefits of therapeutic-grade essential oils with the world. dōTERRA does this by:
+    dōTERRA is committed to sharing the life-enhancing benefits of therapeutic-grade essential oils with the world. dōTERRA does this by:
 
-1. Discovering and developing the world’s highest-quality therapeutic-grade essential oil products through a leveraged network of highly-educated and experienced botanists, chemists, health scientists, and health care professionals;
+    1. Discovering and developing the world’s highest-quality therapeutic-grade essential oil products through a leveraged network of highly-educated and experienced botanists, chemists, health scientists, and health care professionals;
 
-2. Producing our essential oil products to the highest standard of quality, purity, and safety used in the industry - CPTG Certified Pure Therapeutic Grade®;
+    2. Producing our essential oil products to the highest standard of quality, purity, and safety used in the industry - CPTG Certified Pure Therapeutic Grade®;
 
-3. Distributing our products through Wellness Advocates who, working from home, introduce, educate, and sell dōTERRA products;
+    3. Distributing our products through Wellness Advocates who, working from home, introduce, educate, and sell dōTERRA products;
 
-4. Providing educational opportunities for all people interested in learning how therapeutic-grade essential oils can be used as a self-care wellness alternative;
+    4. Providing educational opportunities for all people interested in learning how therapeutic-grade essential oils can be used as a self-care wellness alternative;
 
-5. Bringing together health care professionals of traditional and alternative medicine to encourage further study and application of therapeutic-grade essential oils in modern health care practices.
+    5. Bringing together health care professionals of traditional and alternative medicine to encourage further study and application of therapeutic-grade essential oils in modern health care practices.
 
 
-B. dōTERRA Company Values
+    B. dōTERRA Company Values
 
-dōTERRA will conduct business in such a way as to be a positive influence for good with each person, customer, consultant, employee, vendor, and partner with whom it comes in contact, by:
+    dōTERRA will conduct business in such a way as to be a positive influence for good with each person, customer, consultant, employee, vendor, and partner with whom it comes in contact, by:
 
-1. Conducting our business with absolute honesty and integrity;
+    1. Conducting our business with absolute honesty and integrity;
 
-2. Treating all people with kindness and respect;
+    2. Treating all people with kindness and respect;
 
-3. Conducting our interactions with others in a spirit of service and caring;
+    3. Conducting our interactions with others in a spirit of service and caring;
 
-4. Working hard and managing the use of company resources wisely;
+    4. Working hard and managing the use of company resources wisely;
 
-5. Fostering an uplifting work environment by smiling, laughing, and having fun;
+    5. Fostering an uplifting work environment by smiling, laughing, and having fun;
 
-6. Being grateful for success and giving recognition to others;
+    6. Being grateful for success and giving recognition to others;
 
-7. Being generous with those less fortunate in our community and around the world.
+    7. Being generous with those less fortunate in our community and around the world.</div>
 </body>
 </html>
