--- a/pdftest/pdftest.html
+++ b/pdftest/pdftest.html
@@ -69,9 +69,9 @@
   <div>Debitis animi non nihil natus labore ullam ea magni, sapiente id cumque officiis dolores nobis fuga ut voluptatem unde consequatur, tenetur amet. Iste aperiam, iure. Quibusdam veniam alias, ab placeat.</div>
 
   <div id="pdftest">
-    <a class="dnldButtton" href="https://pdfcrowd.com/url_to_pdf/?height=11in&use_print_media=1" target="">Save to PDF</a>
+    <a class="dnldButtton" href="#bottom" target="">Save to PDF</a>
   </div>
-
+  <a id="listTopicPDFCrowd" target="_blank" href="//pdfcrowd.com/url_to_pdf/?height=11in&use_print_media=1"></a>
   <script src="https://code.jquery.com/jquery-1.12.2.min.js"   integrity="sha256-lZFHibXzMHo3GGeehn1hudTAP3Sc0uKXBXAzHX1sjtk="   crossorigin="anonymous"></script>
   <script src="pdftest.js"></script>
 </body>
