--- a/pdftest/pdftest.html
+++ b/pdftest/pdftest.html
@@ -10,7 +10,7 @@
 <body>
   <div class="green">Lōrem ipsffum  dfiloflr sit amet,™ consectetur adipisicing elit. Nulla enim commodi, doloremque repudiandae impedit, repellendus, recusandae, corporis quo sit tempora illo harum laudantium qui ad! Autem fuga iure adipisci, minus.</div>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicingΔ elitαγ	&alpha;	&beta;&gamma;. Sed temporibus repellendus, accusantium aspernatur nostrum vel enim! Mollitia perferendis, blanditiis nam provident consequatur dignissimos saepe, asperiores eius. Itaque pariatur, perferendis doloribus.</p>
-  <div class="onlyPrint"></div>
+  <div id="onlyPrint"></div>
   <ul>
     <li>Something</li>
     <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
