--- a/index.html
+++ b/index.html
@@ -130,6 +130,11 @@
         <div class="content-section-a">
             <div class="container">
                 <h1>Education</h1>
+                <div class="row">
+                    <div class="col-lg-4 col-sm-6">
+                        <p>Bachelors Degree</p>
+                    </div>
+                </div>
             </div>
         </div>
     </a>
