Use scroll behavior

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>
     $(document).ready(function(){
       // Add smooth scrolling to all links
@@ -53,12 +53,16 @@
         } // End if
       });
     });
-    </script>
+    </script> -->
 
 </head>
 
 <body>
-
+    <style>
+        html {
+            scroll-behavior: smooth;
+        }
+    </style>
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
         <div class="container topnav">
