--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#"><img src="img/chadlogov2.svg" alt="Chad Watkins logo"></a>
+                <a class="navbar-brand topnav" href="#"><img src="img/chadLogoV2.svg" alt="Chad Watkins logo"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
