--- a/index.html
+++ b/index.html
@@ -2,237 +2,177 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Portfolio Site for Chad Watkins">
-    <meta name="author" content="Chad Watkins">
-
-    <title>chadwtkns.github.io</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="css/landing-page.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-
+    <title>Chad Watkins</title>
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+    <link href="lib/all.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
-    <style>
-        html {
-            scroll-behavior: smooth;
-        }
-    </style>
-    <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
-        <div class="container topnav">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand topnav" href="#"><img src="img/chadLogoV2.svg" alt="Chad Watkins logo"></a>
+    <div id="mobile-menu-open" class="shadow-large">
+        <i class="fas fa-bars" aria-hidden="true"></i>
+    </div>
+    <!-- End #mobile-menu-toggle -->
+    <header>
+        <div id="mobile-menu-close">
+            <span>Close</span> <i class="fas fa-times" aria-hidden="true"></i>
+        </div>
+        <ul id="menu" class="shadow">
+            <li>
+                <a href="#about">About</a>
+            </li>
+            <li>
+                <a href="#experience">Experience</a>
+            </li>
+            <li>
+                <a href="#education">Education</a>
+            </li>
+            <li>
+                <a href="#skills">Skills</a>
+            </li>
+            <li>
+                <a href="#contact">Contact</a>
+            </li>
+        </ul>
+    </header>
+    <!-- End header -->
+
+    <div id="lead">
+        <div id="lead-content">
+            <h1>Chad Watkins</h1>
+            <h2>Software Engineer</h2>
+            <a href="/files/chad-watkins-resume.pdf" class="btn btn-light">Download Resume</a>
+        </div>
+        <!-- End #lead-content -->
+
+        <div id="lead-overlay"></div>
+
+        <div id="lead-down">
+            <span>
+                <i class="fas fa-chevron-down" aria-hidden="true"></i>
+            </span>
+        </div>
+        <!-- End #lead-down -->
+    </div>
+    <!-- End #lead -->
+
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h2 class="heading">About Me</h2>
+                </div>
+                <div class="col-md-8">
+                    <p>
+                        I’m a hard working individual who loves creative problem solving. I'm always striving to create clean code and will meet the business's needs.
+                    </p>
+                </div>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#education">Education</a>
-                    </li>
-                    <li>
-                        <a href="#work">Work</a>
-                    </li>
-                    <li>
-                        <a href="#skills">Skills</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Contact</a>
+        </div>
+    </div>
+    <!-- End #about -->
+
+    <div id="experience" class="background-alt">
+        <h2 class="heading">Experience</h2>
+        <div id="experience-timeline">
+            <div data-date="October 2014 – Current">
+                <h3>doTERRA</h3>
+                <h4>Software Developer</h4>
+                <ul>
+                    <li>Helped build doterra.com on top of Hybris platform using Java Spring MVC</li>
+                    <li>Spearheaded converting frontend application from jsp to React</li>
+                    <li>Helped with unit testing in Jest and Junit</li>
+                    <li>Managed login portal application</li>
+                </ul>
+            </div>
+
+            <div data-date="May 2019 – Current">
+                <h3>Cthulhu Runs</h3>
+                <h4>Owner</h4>
+                <ul>
+                    <li>Own a small business that creates a “Virtual Race” for runners to buy Lovecraftian racing gear and running a global race wherever they are. Still in prototype stage using Node.js, Express, React, and Stripe.</li>
+                </ul>
+            </div>
+
+            <div data-date="July 2010 – October 2014">
+                <h3>Infiniti Creations</h3>
+                <h4>Graphic Designer</h4>
+                <ul>
+                    <li>Worked to with multiple clients to create logo designs for dietary supplements
+                        
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
-    </nav>
-
-
-    <!-- Header -->
-    <a name="about"></a>
-    <div class="intro-header">
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="intro-message">
-                        <h1>Welcome</h1>
-                        <h3>chadwtkns.github.io</h3>
-                        <hr class="intro-divider">
-                        <ul class="list-inline intro-social-buttons">
-                            <li>
-                                <a href="img/Resume.pdf" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-folder fa-fw"></i> <span class="network-name">Resume</span></a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/chadwtkns" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                            </li>
-                            <li>
-                                <a href="https://www.linkedin.com/profile/view?id=AAIAAAretCYBlWQD0IExDkRjihY4MaE1UBkhbp4&trk=nav_responsive_tab_profile_pic" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
     </div>
-    <!-- /.intro-header -->
-    <a name="education">
-        <div class="content-section-a">
-            <div class="container">
-                <h1>Education</h1>
-                <div class="row">
-                    <div class="col-lg-4 col-sm-6">
-                        <p>Bachelors Degree</p>
-                    </div>
-                </div>
-            </div>
+    <!-- End #experience -->
+
+    <div id="education">
+        <h2 class="heading">Education</h2>
+        <div class="education-block">
+            <h3>Utah Valley University</h3>
+            <span class="education-date">Sept 2010 - Sept 2014</span>
+            <h4>Bachelor of Science in Internet Technologies</h4>
+            <p>
+                
+            </p>
         </div>
-    </a>
-    <!-- Page Content -->
-
-	<a  name="work"></a>
-    <div class="content-section-a">
-
-        <div class="container">
-          <h1>Projects</h1>
-            <div class="row">
-                <div class="col-lg-4 col-sm-6">
-
-                    <img class="img-responsive" src="img/doterra.png" alt="doterra logo">
-                    <h3 class="text-center">dōTERRA</h3>
-                    <p class="lead">&bull; Worked on various projects notably AromaTouch.com
-                      <br> - Built the front-end (AngularJS)
-                      <br> - Used Agile Methodology: Scrum</p>
-                    <p class="lead">&bull; Worked with various departments in the company</p>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <img class="img-responsive center" src="img/educate_logo.png" alt="Educate and Empower Kids Logo">
-                    <h3 class="text-center">Educate and Empower Kids</h3>
-                    <p class="lead">&bull; Creating a video competition site on NodeJS and RethinkDB
-                      <br> - In charge of project management and development</p>
-                </div>
-                <div class="col-lg-4  col-sm-6">
-                    <img class="img-responsive" src="img/infiniti_creations.jpg" alt="Infiniti Creations Logo">
-                    <h3 class="text-center">Infiniti Creations</h3>
-                    <p class="lead">&bull; Created various graphics in Illustrator and Photoshop</p>
-                    <p class="lead">&bull; Oversaw printing of thousands of labels a day</p>
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
+        <!-- End .education-block -->
     </div>
-    <!-- /.content-section-a -->
-    <a name="skills"></a>
-    <div class="content-section-b">
+    <!-- End #education -->
 
-        <div class="container">
-          <h1>Skills</h1>
-            <div class="row">
-                <div class="col-sm-12">
-                   <span class="skillText">HTML</span><div class="html"></div>
-                   <span class="skillText">CSS</span><div class="css"></div>
-                   <span class="skillText">Javascript</span><div class="javascript"></div>
-                   <span class="skillText">AngularJS</span><div class="angular"></div>
-                   <span class="skillText">Git</span><div class="git"></div>
-                   <span class="skillText">AWS, Linux, Apache</span><div class="grunt"></div>
-                   <span class="skillText">Wordpress</span><div class="wordpress"></div>
-                   <span class="skillText">SASS</span><div class="sass"></div>
-                   <span class="skillText">NodeJS</span><div class="node"></div>
-                   <span class="skillText">PHP</span><div class="jquery"></div>
-                   <span class="skillText">Photoshop</span><div class="photoshop"></div>
-                   <span class="skillText">Illustrator</span><div class="illustrator"></div>
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
+    <div id="skills">
+        <h2 class="heading">Skills</h2>
+        <ul>
+            <li>JavaScript</li>
+            <li>Node.js</li>
+            <li>React</li>
+            <li>Java</li>
+            <li>Git</li>
+            <li>Jest</li>
+            <li>CSS</li>
+            <li>HTML</li>
+            <li>Spring MVC</li>
+        </ul>
     </div>
-    <!-- /.content-section-b -->
+    <!-- End #skills -->
 
-
-	<a  name="contact"></a>
-    <div class="banner">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2>Connect with me online:</h2>
-                </div>
-                <div class="col-lg-6">
-                    <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a href="img/Resume.pdf" class="btn btn-default btn-lg"><i class="fa fa-folder fa-fw"></i> <span class="network-name">Resume</span></a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/chadwtkns" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/profile/view?id=AAIAAAretCYBlWQD0IExDkRjihY4MaE1UBkhbp4&trk=nav_responsive_tab_profile_pic" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.banner -->
-
-    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <ul class="list-inline">
+                <div class="col-sm-5 copyright">
+                    <p>
+                        Copyright &copy; 2020 Chad Watkins
+                    </p>
+                </div>
+                <div class="col-sm-2 top">
+                    <span id="to-top">
+                        <i class="fas fa-chevron-up"></i>
+                    </span>
+                </div>
+                <div class="col-sm-5 social">
+                    <ul>
                         <li>
-                            <a href="#">Home</a>
+                            <a href="https://github.com/chadwtkns" target="_blank"><i class="fas fa-github" aria-hidden="true"></i></a>
                         </li>
-                        <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#work">Work</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#skills">Skills</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#contact">Contact</a>
+                            <a href="https://www.linkedin.com/in/chad-watkins-7460a851/" target="_blank"><i class="fas fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Chad Watkins 2015. All Rights Reserved</p>
                 </div>
             </div>
         </div>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <!-- End footer -->
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/scripts.min.js"></script>
 </body>
 
 </html>
