--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="lib/all.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <script src="https://use.fontawesome.com/8219a6466a.js"></script>
 </head>
 
 <body>
@@ -35,9 +36,6 @@
             </li>
             <li>
                 <a href="#skills">Skills</a>
-            </li>
-            <li>
-                <a href="#contact">Contact</a>
             </li>
         </ul>
     </header>
