--- a/index.html
+++ b/index.html
@@ -87,14 +87,9 @@
                     <li>Spearheaded converting frontend application from jsp to React</li>
                     <li>Helped with unit testing in Jest and Junit</li>
                     <li>Managed login portal application</li>
-                </ul>
-            </div>
-
-            <div data-date="May 2019 – Current">
-                <h3>Cthulhu Runs</h3>
-                <h4>Owner</h4>
-                <ul>
-                    <li>Own a small business that creates a “Virtual Race” for runners to buy Lovecraftian racing gear and running a global race wherever they are. Still in prototype stage using Node.js, Express, React, and Stripe.</li>
+                    <li>Contributed to High Sales Promotion Web Application</li>
+                    <li>Co-lead on Link Generator Project</li>
+                    <li>Created UI library for doTERRA frontend applications</li>
                 </ul>
             </div>
 
@@ -129,14 +124,15 @@
         <h2 class="heading">Skills</h2>
         <ul>
             <li>JavaScript</li>
-            <li>Node.js</li>
+            <li>Typescript</li>
             <li>React</li>
-            <li>Java</li>
+            <li>Node.js</li>
+            <li>Next.js</li>
             <li>Git</li>
             <li>Jest</li>
+            <li>Cypress</li>
             <li>CSS</li>
             <li>HTML</li>
-            <li>Spring MVC</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -146,7 +142,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2020 Chad Watkins
+                        Copyright &copy; 2024 Chad Watkins
                     </p>
                 </div>
                 <div class="col-sm-2 top">
